--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,11 @@ dependencies:
       ref: master
   image_picker: ^0.8.4+4
   decimal: ^2.1.0
+  shared_preferences: ^2.0.12
+
   intl: ^0.17.0
   pie_chart: ^5.1.0
+  charts_flutter: ^0.12.0
   google_fonts: 2.1.0
   cloud_firestore: ^2.5.3
   cupertino_icons: ^1.0.2
